--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ Framework abstract from any web or mobile application libraries, allowing develo
 <div class="sect3">
 <h4 id="_module_structure">1.3.5. Module structure</h4>
 <div class="paragraph">
-<p>RainCatcher modules are written in [TypeScript](<a href="http://typescriptlang.org" class="bare">http://typescriptlang.org</a>).</p>
+<p>RainCatcher modules are written in <a href="http://typescriptlang.org">TypeScript</a>.</p>
 </div>
 <div class="paragraph">
 <p>The main files are modules that by default export a class containing the main implementation for the module&#8217;s intent,with a named export containing a public interface that should be depended upon, and reimplemented.</p>
