--- a/index.html
+++ b/index.html
@@ -14,20 +14,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/19932793?v=4&s=32" type="image/x-icon">
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/19932793?v=4&s=32" type="image/x-icon">
-  <link rel="stylesheet" href="website/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <style>
     body {
       padding-top: 50px;
       padding-bottom: 20px;
     }
   </style>
-  <link rel="stylesheet" href="website/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="website/css/main.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="css/main.css">
   <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <script src="website/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
-
 <body>
+  <script>
+    ((window.gitter = {}).chat = {}).options = {
+      room: 'FeedhenryRaincatcher/Lobby'
+    };
+  </script>
+  <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+
   <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -106,13 +112,13 @@
   <!-- /container -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script>
-    window.jQuery || document.write('<script src="website/js/vendor/jquery-1.11.2.min.js"><\/script>')
+    window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')
   </script>
 
-  <script src="website/js/vendor/bootstrap.min.js"></script>
+  <script src="js/vendor/bootstrap.min.js"></script>
 
-  <script src="website/js/plugins.js"></script>
-  <script src="website/js/main.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
